// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFunctionDefinition auth env variables are removed 1`] = `
[
  {
    "apiPermissions": {
      "hasMutation": false,
      "hasQuery": false,
      "hasSubscription": false,
    },
    "category": "function",
    "entry": "./index.js",
    "environment": {
      "Variables": {
        "SOME_ENV": "some-value",
      },
    },
    "memoryMB": undefined,
    "name": "MyFunc",
    "resourceName": "MyFunc",
    "runtime": undefined,
    "schedule": undefined,
    "timeoutSeconds": undefined,
  },
]
`;

exports[`getFunctionDefinition entry defaults to ./index.js 1`] = `
[
  {
    "apiPermissions": {
      "hasMutation": false,
      "hasQuery": false,
      "hasSubscription": false,
    },
    "category": "function",
    "entry": "./index.js",
    "environment": undefined,
    "memoryMB": undefined,
    "name": "MyFunc",
    "resourceName": "MyFunc",
    "runtime": undefined,
    "schedule": undefined,
    "timeoutSeconds": undefined,
  },
]
`;

exports[`getFunctionDefinition entry is derived from Handler 1`] = `
[
  {
    "apiPermissions": {
      "hasMutation": false,
      "hasQuery": false,
      "hasSubscription": false,
    },
    "category": "function",
    "entry": "./index.js",
    "environment": undefined,
    "memoryMB": undefined,
    "name": "MyFunc",
    "resourceName": "MyFunc",
    "runtime": undefined,
    "schedule": undefined,
    "timeoutSeconds": undefined,
  },
]
`;

exports[`getFunctionDefinition graphql env variables are removed 1`] = `
[
  {
    "apiPermissions": {
      "hasMutation": false,
      "hasQuery": false,
      "hasSubscription": false,
    },
    "category": "function",
    "entry": "./index.js",
    "environment": {
      "Variables": {
        "SOME_ENV": "some-value",
      },
    },
    "memoryMB": undefined,
    "name": "MyFunc",
    "resourceName": "MyFunc",
    "runtime": undefined,
    "schedule": undefined,
    "timeoutSeconds": undefined,
  },
]
`;

exports[`getFunctionDefinition should analyze CloudFormation for API permissions and clean environment variables 1`] = `
[
  {
    "apiPermissions": {
      "hasMutation": false,
      "hasQuery": false,
      "hasSubscription": false,
    },
    "category": "function",
    "entry": "./index.js",
    "environment": {
      "Variables": {
        "OTHER_ENV_VAR": "some-value",
      },
    },
    "memoryMB": 128,
    "name": "myFunction-dev-12345",
    "resourceName": "myFunction",
    "runtime": undefined,
    "schedule": undefined,
    "timeoutSeconds": 30,
  },
]
`;

exports[`getFunctionDefinition storage dynamo env variables are removed 1`] = `
[
  {
    "apiPermissions": {
      "hasMutation": false,
      "hasQuery": false,
      "hasSubscription": false,
    },
    "category": "function",
    "entry": "./index.js",
    "environment": {
      "Variables": {
        "SOME_ENV": "some-value",
      },
    },
    "memoryMB": undefined,
    "name": "MyFunc",
    "resourceName": "MyFunc",
    "runtime": undefined,
    "schedule": undefined,
    "timeoutSeconds": undefined,
  },
]
`;

exports[`getFunctionDefinition storage s3 env variables are removed 1`] = `
[
  {
    "apiPermissions": {
      "hasMutation": false,
      "hasQuery": false,
      "hasSubscription": false,
    },
    "category": "function",
    "entry": "./index.js",
    "environment": {
      "Variables": {
        "SOME_ENV": "some-value",
      },
    },
    "memoryMB": undefined,
    "name": "MyFunc",
    "resourceName": "MyFunc",
    "runtime": undefined,
    "schedule": undefined,
    "timeoutSeconds": undefined,
  },
]
`;
